gitops/apps/files/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
spec:
  selector:
    app: filebrowser
  ports:
    - {name: http, port: 80, targetPort: http}
