gitops/apps/files/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: files
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare: "true"
spec:
  parentRefs:
    - name: portfolio
      sectionName: https
  hostnames:
    - "files.emersonzulian.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: filebrowser
          port: 80
